runcoding homepage ver01

--- a/main/templates/main/index_runcoding.html
+++ b/main/templates/main/index_runcoding.html
@@ -13,49 +13,49 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="runcoding">
     <meta property="og:description" content="runcoding">
-    <meta property="og:image" content="../resource/img/common/share_img.jpg">
+    <meta property="og:image" content=resource/img/common/share_img.jpg">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="../resource/img/common/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../resource/img/common/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../resource/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="resource/img/common/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="resource/img/common/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="resource/css/font-awesome.min.css">
 
     <!-- slick css -->
-    <link rel="stylesheet" type="text/css" href="../resource/css/slick.css" />
-    <link rel="stylesheet" type="text/css" href="../resource/css/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="resource/css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="resource/css/slick-theme.css" />
 
-    <link rel="stylesheet" type="text/css" href="../resource/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="../resource/css/common.css" />
-    <link rel="stylesheet" type="text/css" href="../resource/css/layout.css" />
+    <link rel="stylesheet" type="text/css" href="resource/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="resource/css/common.css" />
+    <link rel="stylesheet" type="text/css" href="resource/css/layout.css" />
 <!--<script>-->
 <!--var elearning_url       = "https://www.runcoding.co.kr"; var elearning_bbs_url   = "https://www.runcoding.co.kr/bbs"; var elearning_is_member = ""; var elearning_is_admin  = ""; var elearning_is_mobile = "0"; var elearning_bo_table  = ""; var elearning_sca       = ""; var elearning_editor    = ""; var elearning_cookie_domain = ""; </script>-->
 
-<script src="../resource/js/vendor/jquery-3.4.1.min.js"></script>
-<script src="../resource/js/jquery-migrate-3.0.0.js"></script>
-<script src="../resource/js/vendor/modernizr-3.7.1.min.js"></script>
-<script src="../resource/js/common.js?ver=20200730001"></script>
-<script src="../resource/js/wrest.js?ver=20200730001"></script>
+<script src="resource/js/vendor/jquery-3.4.1.min.js"></script>
+<script src="resource/js/jquery-migrate-3.0.0.js"></script>
+<script src="resource/js/vendor/modernizr-3.7.1.min.js"></script>
+<script src="resource/js/common.js?ver=20200730001"></script>
+<script src="resource/js/wrest.js?ver=20200730001"></script>
 </head>
 <body>
 <header>
     <div class="header_wrap">
-        <a href="../main/index_runcoding.html" class="logo">
-            <img src="../resource/img/common/logo.png" alt="runcoding">
+        <a href="main/index_runcoding.html" class="logo">
+            <img src="resource/img/common/logo.png" alt="runcoding">
         </a>
         <!-- gnb -->
         <ul class="menu">
             <li>
-                <a href="../lecture/lecture_list.html">코딩키트</a>
+                <a href="lecture/lecture_list.html">코딩키트</a>
             </li>
             <li>
-                <a href="../lounge/coding_lounge.html">코딩라운지</a>
+                <a href="lounge/coding_lounge.html">코딩라운지</a>
             </li>
 
             <li>
-                <a href="../comunity/coding_comunity.html">커뮤니티</a>
+                <a href="comunity/coding_comunity.html">커뮤니티</a>
             </li>
             <li>
-                <a href="../lecture/myclass_list.html">나의 강의실</a>
+                <a href="lecture/myclass_list.html">나의 강의실</a>
             </li>
         </ul>
         <div class="ab_right">
@@ -66,7 +66,7 @@
 
             <!-- 로그인 -->
             <div class="user_menu">
-                <span class="userImg"><img src="../resource/img/sub/img_user.png" alt="유저 프로필"></span>
+                <span class="userImg"><img src="resource/img/sub/img_user.png" alt="유저 프로필"></span>
                 <ul class="sub_menu">
                     <li>
                         <a href="mypage.html">내 프로필</a>
@@ -86,7 +86,7 @@
     </div>
 </header>
 
-<div class="wrap">    <link rel="stylesheet" type="text/css" href="../resource/css/main.css" >
+<div class="wrap">    <link rel="stylesheet" type="text/css" href="resource/css/main.css" >
 
     <!-- main visual -->
     <section class="main_visual">
@@ -103,22 +103,22 @@
                     </span>
                 <a href="codingKit_list.html">시작하기</a>
             </div>
-            <img class="mainVisual" src="../resource/img/main/img_mainVisual.png" alt="상상을 현실로 만드는 런코딩">
+            <img class="mainVisual" src="resource/img/main/img_mainVisual.png" alt="상상을 현실로 만드는 런코딩">
         </div>
     </section>
     <!-- main visual -->
 
     <!-- main content -->
     <section class="section02">
-        <img class="bg left" src="../resource/img/main/bg_sec02left.png" alt="left bg">
-        <img class="bg right" src="../resource/img/main/bg_sec02right.png" alt="right bg">
+        <img class="bg left" src="resource/img/main/bg_sec02left.png" alt="left bg">
+        <img class="bg right" src="resource/img/main/bg_sec02right.png" alt="right bg">
 
         <div class="video_content">
-            <img class="mainVisual" src="../resource/img/main/img_video.jpg">
+            <img class="mainVisual" src="resource/img/main/img_video.jpg">
         </div>
 
         <div class="benefit">
-            <img src="../resource/img/main/img_sec02_01.png" alt="코딩키트를 사면 온라인 강의는 무료!">
+            <img src="resource/img/main/img_sec02_01.png" alt="코딩키트를 사면 온라인 강의는 무료!">
             <div class="text_area">
                     <span class="sec_title">
                         코딩키트를 사면<br/>
@@ -169,7 +169,7 @@
                         </div>
                     </li>
                 </ul>
-                <img src="../resource/img/main/img_sec02_02.png" alt="런코딩, 누가 무엇을 배울 수 있을까?">
+                <img src="resource/img/main/img_sec02_02.png" alt="런코딩, 누가 무엇을 배울 수 있을까?">
             </div>
         </div>
     </section>
@@ -177,7 +177,7 @@
     <section class="section03">
         <div class="makers_area">
             <div class="thumb_list">
-                <img src="../resource/img/main/img_makres01.png" alt="makers">
+                <img src="resource/img/main/img_makres01.png" alt="makers">
             </div>
             <div class="text_area">
                     <span class="sec_title">
@@ -202,20 +202,20 @@
             <div class="link_area">
                 <a class="link big">
                     <!--<span>온라인 강의</span>-->
-                    <img src="../resource/img/main/link_onlineClass.png" alt="온라인 강의">
+                    <img src="resource/img/main/link_onlineClass.png" alt="온라인 강의">
                 </a>
                 <div class="small_link">
                     <a class="link small">
                         <!--<span>예제/퀴즈</span>-->
-                        <img src="../resource/img/main/link_example.png" alt="예제/퀴즈">
+                        <img src="resource/img/main/link_example.png" alt="예제/퀴즈">
                     </a>
                     <a class="link small">
                         <!--<span>만들기</span>-->
-                        <img src="../resource/img/main/link_making.png" alt="만들기">
+                        <img src="resource/img/main/link_making.png" alt="만들기">
                     </a>
                     <a class="link long">
                         <!--<span>응용하기</span>-->
-                        <img src="../resource/img/main/link_application.png" alt="응용하기">
+                        <img src="resource/img/main/link_application.png" alt="응용하기">
                     </a>
                 </div>
             </div>
@@ -224,8 +224,8 @@
                     <li class="pa01">
                             <span class="prog_title">
                                 <!--<span class="num">01</span>-->
-                                <img class="ico prog01" src="../resource/img/main/ico_progress01w.png" alt="키트구입">
-                                <img class="ico_c prog01" src="../resource/img/main/ico_progress01.png" alt="키트구입">
+                                <img class="ico prog01" src="resource/img/main/ico_progress01w.png" alt="키트구입">
+                                <img class="ico_c prog01" src="resource/img/main/ico_progress01.png" alt="키트구입">
                                 <span class="name">키트구입</span>
                             </span>
                         <p class="pa_description">
@@ -238,8 +238,8 @@
                     <li class="pa02">
                             <span class="prog_title">
                                 <!--<span class="num">02</span>-->
-                                <img class="ico prog02" src="../resource/img/main/ico_progress02w.png" alt="코딩하기">
-                                <img class="ico_c prog02" src="../resource/img/main/ico_progress02.png" alt="코딩하기">
+                                <img class="ico prog02" src="resource/img/main/ico_progress02w.png" alt="코딩하기">
+                                <img class="ico_c prog02" src="resource/img/main/ico_progress02.png" alt="코딩하기">
                                 <span class="name">코딩하기</span>
                             </span>
                         <p class="pa_description">
@@ -252,8 +252,8 @@
                     <li class="pa03">
                             <span class="prog_title">
                                 <!--<span class="num">03</span>-->
-                                <img class="ico prog03" src="../resource/img/main/ico_progress03w.png" alt="만들기">
-                                <img class="ico_c prog03" src="../resource/img/main/ico_progress03.png" alt="만들기">
+                                <img class="ico prog03" src="resource/img/main/ico_progress03w.png" alt="만들기">
+                                <img class="ico_c prog03" src="resource/img/main/ico_progress03.png" alt="만들기">
                                 <span class="name">만들기</span>
                             </span>
                         <p class="pa_description">
@@ -266,8 +266,8 @@
                     <li class="pa04">
                             <span class="prog_title">
                                 <!--<span class="num">04</span>-->
-                                <img class="ico prog04" src="../resource/img/main/ico_progress04w.png" alt="응용하기">
-                                <img class="ico_c prog04" src="../resource/img/main/ico_progress04.png" alt="응용하기">
+                                <img class="ico prog04" src="resource/img/main/ico_progress04w.png" alt="응용하기">
+                                <img class="ico_c prog04" src="resource/img/main/ico_progress04.png" alt="응용하기">
                                 <span class="name">응용하기</span>
                             </span>
                         <p class="pa_description">
@@ -283,9 +283,9 @@
     </section>
 
     <div class="banner bottom">
-        <img class="bg left01" src="../resource/img/sub/bg_botBanner_left01.png" alt="bg01">
-        <img class="bg left02" src="../resource/img/sub/bg_botBanner_left02.png" alt="bg02">
-        <img class="bg right" src="../resource/img/sub/bg_botBanner_right.png" alt="bg03">
+        <img class="bg left01" src="resource/img/sub/bg_botBanner_left01.png" alt="bg01">
+        <img class="bg left02" src=resource/img/sub/bg_botBanner_left02.png" alt="bg02">
+        <img class="bg right" src="resource/img/sub/bg_botBanner_right.png" alt="bg03">
         <span>
                 CREATIVE CODING KIT로 학습하는 <b>런코딩!</b><br/>
                 지금 시작해보세요.
@@ -294,8 +294,8 @@
     </div>
 
     <section class="section04">
-        <img class="bg left" src="../resource/img/main/bg_contactLeft.png" alt="bg">
-        <img class="bg right" src="../resource/img/main/bg_contactRight.png" alt="bg">
+        <img class="bg left" src="resource/img/main/bg_contactLeft.png" alt="bg">
+        <img class="bg right" src="resource/img/main/bg_contactRight.png" alt="bg">
         <div class="contactUs">
             <div class="text_area">
                 <span class="sm_title">CONTACT US</span>
@@ -317,9 +317,9 @@
 
 
 <div class="banner bottom">
-    <img class="bg left01" src="../resource/img/sub/bg_botBanner_left01.png" alt="bg01">
-    <img class="bg left02" src="../resource/img/sub/bg_botBanner_left02.png" alt="bg02">
-    <img class="bg right" src="../resource/img/sub/bg_botBanner_right.png" alt="bg03">
+    <img class="bg left01" src="resource/img/sub/bg_botBanner_left01.png" alt="bg01">
+    <img class="bg left02" src="resource/img/sub/bg_botBanner_left02.png" alt="bg02">
+    <img class="bg right" src="resource/img/sub/bg_botBanner_right.png" alt="bg03">
     <span>
                 CREATIVE CODING KIT로 학습하는 <b>런코딩!</b><br/>
                 지금 시작해보세요.
@@ -331,7 +331,7 @@
     <div>   <link rel="import" href="../common/privacy.html"> </div>
 <footer>
     <div class="footer">
-        <img class="ci" src="../resource/img/common/logo_footer.png" alt="런코딩">
+        <img class="ci" src="resource/img/common/logo_footer.png" alt="런코딩">
         <div class="footerText">
             <div class="information">
                 <span>INFORMATION</span>
@@ -378,10 +378,10 @@
             <div class="snsArea">
                 <span>SNS</span>
                 <div class="snsBtn">
-                    <a><img src="../resource/img/common/ico_kakaoTalk.png" alt="kakaotalk"></a>
-                    <a><img src="../resource/img/common/ico_instagram.png" alt="instagram"></a>
-                    <a><img src="../resource/img/common/ico_naverBlog.png" alt="naverblog"></a>
-                    <a><img src="../resource/img/common/ico_youtube.png" alt="youtube"></a>
+                    <a><img src="resource/img/common/ico_kakaoTalk.png" alt="kakaotalk"></a>
+                    <a><img src="resource/img/common/ico_instagram.png" alt="instagram"></a>
+                    <a><img src="resource/img/common/ico_naverBlog.png" alt="naverblog"></a>
+                    <a><img src="resource/img/common/ico_youtube.png" alt="youtube"></a>
                 </div>
             </div>
         </div>
