--- a/main/templates/main/lecture/myclass.html
+++ b/main/templates/main/lecture/myclass.html
@@ -53,7 +53,7 @@
     </script>
 
     <div class="header_wrap">
-        <a href="../main/index_runcoding.html" class="logo">
+        <a href="../index_runcoding.html" class="logo">
             <img src="../resource/img/common/logo.png" alt="runcoding">
         </a>
         <!-- gnb -->
