--- a/main/templates/main/lecture/lecture_view_mblock.html
+++ b/main/templates/main/lecture/lecture_view_mblock.html
@@ -37,7 +37,7 @@
 <body>
     <header>
         <div class="header_wrap">
-            <a href="../../index_runcoding.html" class="logo">
+            <a href="../index_runcoding.html" class="logo">
                 <img src="../resource/img/common/logo.png" alt="runcoding">
             </a>
             <!-- gnb -->
