--- a/main/templates/main/lounge/coding_lounge.html
+++ b/main/templates/main/lounge/coding_lounge.html
@@ -39,7 +39,7 @@
 <body>
 <header>
     <div class="header_wrap">
-        <a href="../main/index_runcoding.html" class="logo">
+        <a href="../index_runcoding.html" class="logo">
             <img src="../resource/img/common/logo.png" alt="runcoding">
         </a>
         <!-- gnb -->
