--- a/static/resource/css/common.css
+++ b/static/resource/css/common.css
@@ -869,8 +869,8 @@ footer .footer .snsArea .snsBtn a {
 [data-ml-modal] p:first-child, [data-ml-modal] p:last-child {margin:0;}
 
 /* youtube플레이어 화면에 꽉차게 하는 css */
-#youTubePlayer1 {position:relative;width:100%;padding-bottom:56.25%;}
-#youTubePlayer1 iframe {position:absolute;width:100%;height:100%;}
+youTubePlayer1 {position:relative;width:100%;padding-bottom:56.25%;}
+youTubePlayer1 iframe {position:absolute;width:100%;height:100%;}
 
 
 
