--- a/main/templates/main/index_runcoding.html
+++ b/main/templates/main/index_runcoding.html
@@ -102,7 +102,7 @@
                         <span class="sky">CODE. MAKE. CREATE</span><br/>
                         상상을 현실로 만드는 런코딩
                     </span>
-                <a href="codingKit_list.html">시작하기</a>
+                <a href="{% static 'lecture/lecture_list.html' %}">시작하기</a>
             </div>
             <img class="mainVisual" src="{% static 'resource/img/main/img_mainVisual.png' %}" alt="상상을 현실로 만드는 런코딩">
         </div>
@@ -116,6 +116,8 @@
 
         <div class="video_content">
             <img class="mainVisual" src="{% static 'resource/img/main/img_video.jpg' %}">
+
+
         </div>
 
         <div class="benefit">
