--- a/static/resource/css/common.css
+++ b/static/resource/css/common.css
@@ -447,7 +447,7 @@ header .menuBtn .menu-btn.gnbClose .hid {
 	justify-content:center;
 	align-items:center;
     margin-right:68px;
-	padding:0.525em 0;
+	padding:0.525em 0;codingKit_list
 	width:8.33em;
 	font-size:0.6em;
 	border:1px solid rgba(255,255,255,.4);
