--- a/static/resource/css/order.css
+++ b/static/resource/css/order.css
@@ -27,12 +27,39 @@
     width:100%;
 }
 
+.container-2 {
+    margin-right: auto;
+    margin-left: auto;
+
+    padding-right: 15px;
+    max-width: 1080px;
+    width:100%;
+}
+
+.container-3 {
+    margin-right: auto;
+    margin-left: auto;
+
+    padding-right: 15px;
+    max-width: 1500px;
+    width:100%;
+}
+
 .container:before, .container:after {
     content: " ";
     display: table;
 }
 
 .container:after {
+    clear: both;
+}
+
+.container2:before, .container2:after {
+    content: " ";
+    display: table;
+}
+
+.container2:after {
     clear: both;
 }
 
@@ -243,6 +270,14 @@ thead {
     border-right: dashed #e6e6e6 1px;
 }
 
+.padding-all-15 {
+    padding: 15px !important;
+}
+
+.margin-bottom-0 {
+    margin-bottom: 0px !important;
+}
+
 .flex-between-center {
     display: flex;
     justify-content: space-between;
@@ -266,6 +301,15 @@ thead {
 
 .font-14 {
     font-size: 14px !important;
+    font-family: MetroSans;
+    font-weight: 400;
+    line-height: 1.5438;
+    letter-spacing: 0;
+
+}
+
+.font-12 {
+    font-size: 12px !important;
     font-family: MetroSans;
     font-weight: 400;
     line-height: 1.5438;
@@ -301,8 +345,94 @@ div, header, section, nav, input, ul, li {
     justify-content: center;
 }
 
+tfoot tr td {
+    border-bottom: 1px solid #efefef;
+    background: #f7f7f7;
+    height: 25px;
+    text-align: right;
+}
+
+
 .order-option .prdModify li { padding:6px 0 0; *zoom:1; }
 .order-option .prdModify li:after { content:""; display:block; clear:both; }
 .order-option .prdModify li span { float:left; width:110px; margin:3px 0 0; }
 .order-option .prdModify li select { float:right; width:294px; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px; }
 .prdModify li input { float:right; width:286px; height:22px; padding:0 0 0 6px; border:1px solid #d4d4d4; color:#3c3c3c; line-height:22px; }
+
+.xans-order-totalsummary {
+    color: #353535;
+    line-height: 1.5;
+
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 15px;
+    max-width: 1110px;
+    width:100%;
+}
+
+.displaynone {
+    display: none !important;
+}
+
+.xans-order-totalsummary th {
+    height: 39px;
+    border-top: 1px solid #e9e9e9;
+    border-left: 1px solid #e9e9e9;
+    border-right: 1px solid #e9e9e9;
+    line-height: 39px;
+    background: #fbfafa;
+    font: bold 0.75em Verdana,Dotum,AppleGothic,sans-serif;
+}
+
+colgroup {
+    display: table-column-group;
+}
+
+table {
+    width: 100%;
+    border: 0;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+col {
+    display: table-column;
+}
+
+.xans-order-totalsummary td {
+    height: 58px;
+    border-top: 1px solid #e9e9e9;
+    border-left: 1px solid #e9e9e9;
+    border-right: 1px solid #e9e9e9;
+    border-bottom: 1px solid #e9e9e9;
+    line-height: 58px;
+    text-align: center;
+    font-size: 23px;
+    background-color: #fff !important;
+}
+
+.xans-order-totalsummary td .box {
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.xans-order-totalsummary td strong {
+    letter-spacing: -1px;
+}
+
+
+.xans-order-totalsummary td .tail {
+    font-size: 14px;
+}
+
+thead {
+    display: table-header-group;
+    vertical-align: middle;
+    border-color: inherit;
+}
+
+tr {
+    display: table-row;
+    vertical-align: inherit;
+    border-color: inherit;
+}
